Fix moving pag and elements up/down

--- a/src/quizCreation/templates/quiz_page_edit.html
+++ b/src/quizCreation/templates/quiz_page_edit.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block content %}
 
-<p class="fs-13 mb-3 text-black">Editing quiz page: {{quiz_page.name}}</p>
+<p class="fs-13 mb-3 text-black">Editing quiz page: {{quiz_page.title}}</p>
 
 
 <div
