--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -24,9 +24,9 @@
                         </ul>
                     </div> {% endcomment %}
                     
-                    <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'preview_quiz' user_quiz.id %}" type="button" class="btn btn-primary site-button mb-2 mr-2">View quiz preview</a>
+                    <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'preview_quiz' user_quiz.id %}" type="button" class="btn  mb-2 mr-2">View quiz preview</a>
 
-                    <button type="button" class="btn btn-primary site-button mb-2" data-toggle="modal" data-target="#exampleModalCenter">Add quiz page</button>
+                    <button type="button" class="btn mb-2" data-toggle="modal" data-target="#exampleModalCenter">Add quiz page</button>
 
                     <div class="modal fade" id="exampleModalCenter">
                         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -56,6 +56,9 @@
                             </div>
                         </div>
                     </div>
+
+                    <a target="_blank" href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' user_quiz.id %}" type="button" class="btn mb-2 mr-2">Link to take quiz</a>
+ 
                   
                 </div>
                 <div class="card-body tab-content pt-2">
@@ -80,7 +83,7 @@
                               
                                 </div>
                                 <div class="info ">
-                                    <h4 class="fs-20 "><p class="text-black">{{page.number}}. {{page.name}}</p></h4>
+                                    <h4 class="fs-20 "><p class="text-black">{{page.number}}. {{page.title}}</p></h4>
                                     <p>This page will always be shown as it has no conditions attached</p>
                                 </div>
                             </div>
