--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -8,7 +8,10 @@
                 <div class="card-header d-sm-flex flex-wrap d-block pb-0 border-0">
                     <div class="mr-auto pr-3 mb-3">
                         <h4 class="text-black fs-20"></h4>
-                        <p class="fs-13 mb-0 text-black">Editing quiz: {{user_quiz.name}}</p>
+                        <a href="{% url 'dashboard_home' %}">
+
+                            <p class="fs-13 mb-0 text-black">< Editing quiz: {{user_quiz.name}}</p>
+                        </a>
                     </div>
                     {% comment %} <div class="card-action card-tabs mr-4 mt-3 mt-sm-0 mb-3">
                         <ul class="nav nav-tabs" role="tablist">
