--- a/src/templates/dashboard2/index.html
+++ b/src/templates/dashboard2/index.html
@@ -124,6 +124,9 @@
                                 </div>
                             </div>
                             <div class="ml-auto mr-4 pr-1">
+                            <a class="d-block " href="{% url 'edit_quiz' quiz.id %}">
+                                <div class="float-right fs-24 text-dark">View responses <i class="fa fa-edit"></i></div>
+                            </a>
 
                             <a class="d-block " href="{% url 'edit_quiz' quiz.id %}">
                                 <div class="float-right fs-24 text-dark">Edit <i class="fa fa-edit"></i></div>
