Fix glitch with html content display on page edit

--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -45,7 +45,7 @@
 
                 <br>
                 {% autoescape off %}
-                <div>
+                <div {% if element.type == "Text element" %} class="w-100" {% endif %}>
                     {{element.element.content}}
                 </div>
                 {% endautoescape %}
