--- a/src/quizRender/templates/take_quiz.html
+++ b/src/quizRender/templates/take_quiz.html
@@ -1,9 +1,8 @@
-{% extends 'dashboard2/base.html' %}
+{% extends 'take_quiz/base.html' %}
 
 {% load static %}
 {% block content %}
 
-<h5>Take quiz</h5>
 {% include 'quiz_form.html' %}
 
 
