--- a/src/quizRender/templates/take_quiz_elements/text_input_element.html
+++ b/src/quizRender/templates/take_quiz_elements/text_input_element.html
@@ -1,5 +1,5 @@
 <textarea  
-{% if not answer %}
+{% if not checked_db %}
 hx-trigger = 'load'
 hx-swap=outerHTML
 hx-target="#question_{{element.id}}"
