--- a/src/quizData/templates/quizData/response_details.html
+++ b/src/quizData/templates/quizData/response_details.html
@@ -8,7 +8,7 @@
 <div class="row">
 
 
-
+<a type="button" href="{% url 'view_quiz_results' quiz.id %}">< Back</a>
     <div class="col-xl-12 col-lg-12">
         <div class="card">
             <div class="card-header border-0 pb-0">
@@ -59,6 +59,8 @@
     </div>
 
 </div>
+
+
 
 {% endblock content %}
 
