Fix edit ability code and also allow choice editing

--- a/src/quizCreation/templates/element_choices.html
+++ b/src/quizCreation/templates/element_choices.html
@@ -1,4 +1,4 @@
-<select  name="element" id="multiC" class="form-select d-none">
+<select  name="element" id="multiC" class="form-select d-none" required>
     <option value=""></option>
         <option value="text" id="option_text">text</option>
         <option value="CharInput" id="option_CharInput">text</option>
