--- a/src/templates/dashboard2/includes/header.html
+++ b/src/templates/dashboard2/includes/header.html
@@ -55,6 +55,10 @@
             display: none !important;
         }
     }
+
+    body {
+        color: #302929 !important;
+    }
 </style>
 
 <!DOCTYPE html>
