--- a/src/quizCreation/templates/element_forms/EmailInput.html
+++ b/src/quizCreation/templates/element_forms/EmailInput.html
@@ -25,7 +25,7 @@
     {% endfor %}
 
     <div class="my-3 text-center">
-        <button 
+        <a type="button" 
         {% if not edit %}
         hx-get={% url 'all_element_swatches' user_quiz.id quiz_page.id %} hx-trigger=click
         hx-target='#modalContent' hx-swap=outerHTML 
@@ -39,7 +39,7 @@
         {% else %}
         Go back
         {% endif %}
-    </button>
+    </a>
         <button type="submit" class="btn btn-primary site-button">{% if edit %}Save{% else %}Add{% endif %}</button>  
     </div>
     </form>
