--- a/src/quizCreation/templates/element_forms/MultipleChoice.html
+++ b/src/quizCreation/templates/element_forms/MultipleChoice.html
@@ -8,14 +8,13 @@
 
     {% if edit %}
     hx-post={% url 'edit_multiple_choice_element' user_quiz.id quiz_page.id quiz_page_element.id %}
-    hx-target='#page_elements'
+    hx-target='#modalContent'
     hx-swap=outerHTML
     {% else %}
     hx-post={% url 'add_multiple_choice_element' user_quiz.id quiz_page.id %}
     hx-target='#modalContent'
     hx-swap=outerHTML
     {% endif %}
-    hx-sync="closest form:abort"
 
     >
     {{form.media}}
@@ -25,7 +24,7 @@
     {% endfor %}
 
     <div class="my-3 text-center">
-        <button 
+        <a 
         {% if not edit %}
         hx-get={% url 'all_element_swatches' user_quiz.id quiz_page.id %} hx-trigger=click
         hx-target='#modalContent' hx-swap=outerHTML 
@@ -39,7 +38,7 @@
         {% else %}
         Go back
         {% endif %}
-    </button>
+    </a>
         <button type="submit" class="btn btn-primary site-button">{% if edit %}Save{% else %}Add{% endif %}</button>  
     </div>
     </form>
