Complete backend for quiz analytics scripts and logo

--- a/src/quizCreation/templates/element_forms/AddChoiceMultipleChoiceModal.html
+++ b/src/quizCreation/templates/element_forms/AddChoiceMultipleChoiceModal.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="my-2">
-            <a type="button" class="btn btn-primary site-button" 
+            <a type="button" class="btn btn-primary site-button float-right" 
             data-dismiss="modal"
             hx-trigger="click"
             hx-target="#page_elements"
@@ -67,12 +67,8 @@
             {% endif %}
             
             >
-            {% if not edit %}
-
-            Finished adding choices
-            {% else %}
-            Finished editing
-            {% endif %}
+            Save changes
+        
         </a>
         </div>
         </form>
