--- a/src/templates/dashboard2/includes/header.html
+++ b/src/templates/dashboard2/includes/header.html
@@ -178,12 +178,12 @@
                                  
                               
                                 <li class="nav-item  header-profile">
-                                    <a class="nav-link" href="javascript:void(0)" role="button" >
+                                    {% comment %} <a class="nav-link" href="javascript:void(0)" role="button" > {% endcomment %}
                                         <div class="header-info">
                                             <span class="text-black"><strong>{{user.email}}</strong></span>
                                             {% comment %} <p class="fs-12 mb-0">Super Admin</p> {% endcomment %}
                                         </div>
-                                    </a>
+                                    {% comment %} </a> {% endcomment %}
                                    
                                 </li>
                             </ul>
