--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -75,7 +75,7 @@
                                  {% endif %}
                                 type="submit" 
                                 
-                                class="btn btn-primary">Save changes</button>
+                                class="btn btn-primary site-button">Save changes</button>
                             </div>
 
                         </form>
